--- a/sections/statodellarte.tex
+++ b/sections/statodellarte.tex
@@ -1,8 +1,10 @@
 \chapter{Stato dell'arte}
 \label{statodellarte}
 
+\newpage
 \section{Machine Learning}
 
+\newpage
 \section{Reti neurali}
 
 \subsection{Percettrone Multistrato}
@@ -151,5 +153,6 @@ least expensive option, in our experiments.
 
 \subsubsection{Autoencoder}
 
+\newpage
 \section{Adversarial Learning}
 ??? come?
